# rndpool

./: CMakeLists.txt  CMakelists.txt  README.md  main.cpp
examples/: main.cpp
inc/: rndpool_inc.h
src/: rndpool.cpp  rndpool.h
